<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">

    <string name="app_name">健人来打卡</string>
    <string name="action_settings">Settings</string>
    <string name="bingo">打卡去！</string>
    <string name="tips">性别</string>
    <string name="agree">我已仔细阅读并同意服务协议</string>
    <string name="more">更多</string>
    <string name="doc">打卡</string>
    <string name="home">首页</string>
    <string name="bottom">底栏</string>
    <string name="homeplace">主页</string>
    <string name="tests">测试</string>
    <string name="manage">管理</string>
    <string name="tipss">贴士</string>
    <string name="days">我已连续打卡</string>
    <string name="motto">我的宣言是</string>
    <string name="save">保存！</string>
    <string name="back">返回</string>
    <string name="logo">logo</string>
    <string name="tipstitle">————— 贴士分类 —————</string>
    <string name="managetitle">————— 管理分类 —————</string>
    <string name="teststitle">————— 测试目录 —————</string>
    

</resources>
