<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFF" >

        <RelativeLayout
            android:id="@+id/rl_layout"
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:background="#BADF7F"
            android:gravity="center_vertical" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:background="@drawable/title_btn_back"
                android:onClick="register_back" >

                <ImageView
                    android:id="@+id/back"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                android:contentDescription="@string/back"
                android:clickable="true"
                    android:src="@drawable/back" />

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_vertical"
                android:contentDescription="@string/logo"
                    android:src="@drawable/icon2" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="  管理"
                    android:textColor="#000000"
                    android:textSize="18sp" />
            </LinearLayout>

            <ImageView
                android:id="@+id/home"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="5dp"
                android:contentDescription="logo"
                android:clickable="true"
                android:src="@drawable/home2" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignTop="@+id/home"
                android:layout_marginRight="10dp"
                android:layout_toLeftOf="@+id/home"
                android:contentDescription="logo"
                android:src="@drawable/search" />

        </RelativeLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/managetitle" 
                android:textSize="20sp"/>
            <LinearLayout 
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp">

                    <Button
                        android:id="@+id/bntdiet"
                        android:layout_width="fill_parent"
                        android:layout_height="125dp"
                        android:background="@drawable/mdiet"
                        android:layout_weight="1"/>

                    <Button
                        android:id="@+id/bntsport"
                        android:layout_width="fill_parent"
                        android:layout_height="125dp"
                        android:background="@drawable/msport"
                        android:layout_weight="1" />
  
                    <Button
                        android:id="@+id/bntschedule"
                        android:layout_width="fill_parent"
                        android:layout_height="125dp"
                        android:background="@drawable/mschedule"
                        android:layout_weight="1" />
            </LinearLayout>
          
        </LinearLayout>

</LinearLayout>
