<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="#F2EDD9">

     <RelativeLayout
            android:id="@+id/rl_layout"
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:background="#BADF7F"
            android:gravity="center_vertical" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:background="@drawable/title_btn_back"
                android:onClick="register_back" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                android:contentDescription="@string/back"
                    android:src="@drawable/back" />

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_vertical"
                android:contentDescription="@string/logo"
                    android:src="@drawable/icon2" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="  测试"
                    android:textColor="#000000"
                    android:textSize="18sp" />
            </LinearLayout>

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="5dp"
                android:contentDescription="logo"
                android:src="@drawable/home2" />
        </RelativeLayout>
                <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/teststitle" 
                android:textSize="20sp"/>
            <LinearLayout 
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">

                    <ImageView
                        android:id="@+id/imgt1"
                        android:layout_width="fill_parent"
                        android:layout_height="150dp"
                        android:src="@drawable/test_1"
                        android:layout_weight="1"/>

                    <ImageView
                        android:id="@+id/imgt2"
                        android:layout_width="fill_parent"
                        android:layout_height="150dp"
                        android:src="@drawable/test_2"
                        android:layout_weight="1" />
            </LinearLayout>
            <LinearLayout 
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">

                    <ImageView
                        android:id="@+id/imgt3"
                        android:layout_width="fill_parent"
                        android:layout_height="150dp"
                        android:src="@drawable/test_3"
                        android:layout_weight="1" />

                    <ImageView
                        android:id="@+id/imgt4"
                        android:layout_width="fill_parent"
                        android:layout_height="150dp"
                        android:src="@drawable/test_4"
                        android:layout_weight="1" />
            </LinearLayout>
            
        </LinearLayout>
    

</LinearLayout>
